fix text align

--- a/components/StratagemConsole.module.css
+++ b/components/StratagemConsole.module.css
@@ -59,4 +59,5 @@
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
   font-size: 0.7rem;
   margin-left: auto;
+  text-align: right;
 }
